<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingVertical="@dimen/padding_vertical"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/main_img"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/main_img_view_desc"
        android:src="@drawable/students"
        app:layout_constraintBottom_toTopOf="@+id/main_welcome_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome_msg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_img"
        app:layout_constraintBottom_toTopOf="@id/main_action_msg"/>

    <TextView
        android:id="@+id/main_action_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_action_msg"
        app:layout_constraintBottom_toTopOf="@id/main_btn_compute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_welcome_msg" />

    <Button
        android:id="@+id/main_btn_compute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/main_btn_compute"
        app:layout_constraintBottom_toTopOf="@id/main_btn_conversion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_action_msg" />

    <Button
        android:id="@+id/main_btn_conversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/main_btn_conversion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_compute" />

</androidx.constraintlayout.widget.ConstraintLayout>