<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingVertical="@dimen/padding_horizontal">

    <TextView
        android:id="@+id/grade_raw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:text="@string/grade_raw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/grade_point"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.Material3.BodyLarge" />

    <TextView
        android:id="@+id/grade_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:text="@string/grade_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grade_raw"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.Material3.BodyLarge"/>

    <TextView
        android:id="@+id/grade_raw_value"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@id/grade_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grade_raw"
        tools:text="95.8 - 100.0" />

    <TextView
        android:id="@+id/grade_point_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grade_raw"
        app:layout_constraintTop_toBottomOf="@id/grade_point"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        tools:text="4.0" />

    <TextView
        android:id="@+id/grade_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grade_description"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/grade_description_value"
        app:layout_constraintTop_toBottomOf="@+id/grade_raw_value" />

    <TextView
        android:id="@+id/grade_description_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/grade_description"
        app:layout_constraintTop_toTopOf="@+id/grade_description"
        tools:text="Excellent" />

</androidx.constraintlayout.widget.ConstraintLayout>